# e_library

./: .gitignore  README.md  pyproject.toml
author/: admin.py  models.py
author/api/: permissions.py  serializers.py  urls.py  viewset.py
author/migrations/: 0001_initial.py
book/: admin.py  models.py  utils.py
book/api/: serializers.py  urls.py  viewset.py
book/migrations/: 0001_initial.py
db_backup/: db.json
e_library/: settings.py  urls.py
reader/: admin.py  models.py  validators.py
reader/api/: serializers.py  urls.py  viewset.py
reader/migrations/: 0001_initial.py  0002_alter_reader_phone_num.py  0002_remove_reader_is_admin_reader_role.py  0003_alter_reader_phone_num.py  0003_alter_reader_role.py  0004_alter_reader_active_books.py
